<resources>
    <string name="app_name">HelloWord!</string>
    <string name="todo">TODO</string>
    <string name="todo1">TODO</string>
    <string name="pic">TODO</string>
    <string name="wordle">Wordle !</string>
    <string name="w">W</string>
    <string name="u">U</string>
    <string name="y">Y</string>
    <string name="t">T</string>
    <string name="r">R</string>
    <string name="e">E</string>
    <string name="p">P</string>
    <string name="o">O</string>
    <string name="i">I</string>
    <string name="a">A</string>
    <string name="s">S</string>
    <string name="d">D</string>
    <string name="f">F</string>
    <string name="g">G</string>
    <string name="h">H</string>
    <string name="j">J</string>
    <string name="k">K</string>
    <string name="l">L</string>
    <string name="z">Z</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="enter">ENTER</string>
    <string name="m">M</string>
    <string name="n">N</string>
    <string name="v">V</string>
    <string name="x">X</string>
    <string name="delete">DELETE</string>
    <string name="q">Q</string>
    <string name="button">Button</string>
    <string name="setting">Setting</string>
    <string name="play">Play</string>
    <string name="helloword">Helloword</string>
    <string name="music_background">music_background</string>
    <string name="you_wins">You Wins</string>
    <string name="restart">Restart?</string>
    <string name="restart1">restart1</string>
    <string name="you_win1">you_win1</string>
    <string name="answer">answer</string>
    <string name="settingg">settingg</string>
    <string name="you_win">You win</string>
    <string name="music_background1">Music_Background</string>
    <string name="restart32">Restart</string>
    <string name="setingg">TODO</string>
    <string name="answer1">Answer</string>
    <string name="click_me_for_answer">click me for answer</string>
    <string name="playyy">TODO</string>
    <string name="palyyy">TODO</string>
    <string name="set">TODO</string>
    <string name="playy">TODO</string>
    <string name="settt">TODO</string>
    <string name="ddddddddddddddddd">Button</string>
    <string name="texx">Button</string>
    <string name="aaa">A</string>
    <string name="textview">TextView</string>
    <string name="restardd">TODO</string>
    <string name="resdss">TODO</string>
    <string name="youlost">Youlost</string>
    <string name="you_have_to_guess_the_hidden_word_in_6_tries_n_and_the_color_of_the_letters_nchanges_to_show_how_close_you_are_n_to_start_the_game_just_enter_any_word_for_example">You have to guess the hidden word in 6 tries\n and the color of the letters\nchanges to show how close you are.\n To start the game, just enter any word, for example:</string>
    <string name="how_to_play_n">How to play\n</string>
    <string name="ddd">D\t</string>
    <string name="rr">R</string>
    <string name="ee">E</string>
    <string name="eeaaaa">A</string>
    <string name="mmm">M</string>
    <string name="is_in_the_word_and_in_the_correct_spot">is in the word and in the correct spot.</string>
    <string name="is_in_the_word_but_in_the_wrong_spot">is in the word but in the wrong spot.</string>
    <string name="aren_t_in_the_target_word_at_all">aren\'t in the target word at all.</string>
    <string name="qusetmark">TODO</string>
    <string name="themeName">defalut</string>
</resources>